--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>DC</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<div class="wrapper">
+			<img src="images/logo.png" />
+
+			<h1>FEATURED</h1>
+
+			<div class="featured">
+				<div class="item">
+					<img src="images/featured_all_acces.jpg" />
+					<h3>DC ALL Acces</h3>
+				</div>
+
+				<div class="item wonderwoman">
+					<img src="images/featured_wonderwoman.jpg" />
+					<h3>Wonder Woman</h3>
+				</div>
+			</div>
+
+			<h1>WHO'S WHO</h1>
+
+			<div class="whoswho">
+				<div class="item">
+					<img src="images/superman.jpg" />
+					<h2>Superman</h2>
+				</div>
+
+				<div class="item">
+					<img src="images/batman.jpg" />
+					<h2>Batman</h2>
+				</div>
+
+				<div class="item">
+					<img src="images/wonderwoman.jpg" />
+					<h2>Wonderwoman</h2>
+				</div>
+
+				<div class="item">
+					<img src="images/greenlantern.jpg" />
+					<h2>Green Lantern</h2>
+				</div>
+
+				<div class="item">
+					<img src="images/flash.jpg" />
+					<h2>The Flash</h2>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
